--- a/css/style.css
+++ b/css/style.css
@@ -1,42 +1,72 @@
 body {
-    background-color:rgb(0, 2, 3);   
-   }
-   
-   .mainDiv {
-       background-color: #210458;
-       height: 610px;
-       width: 610px;
-       margin: 0 auto;
-   }
-   
-   .mainDiv > div {
-       margin: 0 0 auto;
-       border-radius: 50%;
-       display: inline-block;
-       color: white;
-       
-   }
-   
-   p {
-       padding: 50px;
-   }
-   
-   .red {
-   height: 200px;
-   width: 200px;
-   background-color:rgba(253, 8, 8, 0.897);
-   
-   
-   }
-   .yellow {
-       height: 200px;
-       width: 200px;
-       background-color: rgba(220, 245, 0, 0.897);
-       display: none;
-   }
-   
-   .green {
-       height: 200px;
-       width: 200px;
-       background-color: rgba(30, 255, 0, 0.986);
-   }
+    background-color: black;
+}
+
+.mainDiv {
+    width: 600px;
+    height: 600px;
+    margin: 0 auto;
+    background-color: cornflowerblue;
+    font-size: 0;
+}
+.mainDiv > div {
+    width: 200px;
+    height: 200px;
+    box-sizing: border-box;
+    margin: 0 auto;
+    padding: 0;
+    border: 1px solid black;
+    border-radius: 50%;
+}
+.Redc {
+
+    background-color: red;
+}
+.Yellowc {
+    background-color: yellow;
+}
+
+.Greenc {
+    background-color: green;
+}
+
+.Yellowc {
+    animation-name: YellowC;
+    animation-duration: 3s;
+    animation-fill-mode: forwards;
+    animation-delay: 3s;
+
+    transition-property: transform;
+    transition-duration: 3s; 
+}
+.YellowC:hover {
+    transform:rotateY(360deg);
+}
+.Greenc {
+    color: white;
+    border: 2px solid white;
+    padding: 1rem;
+    margin: 2rem;
+    opacity: 0;
+    animation-name: Greenc;
+    animation-duration: 3s;
+    animation-fill-mode: forwards;
+    animation-iteration-count:infinite;
+}
+@keyframes Greenc {
+    0% {opacity: 0}
+    100% {opacity:100}
+}
+.Redc {
+    font-size: 3.5rem;
+    line-height: 1.3;
+    position: relative;
+    animation: Redc;
+    animation-duration: 2s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes Redc {
+    0% {top: -100px}
+    100% {top: 0px}
+}
